# proof-of-deliberation

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  pod-unified2.py  pod_elec.py  pod_unified (1).py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements-validation.txt  requirements.txt
PoD_code/: app.html  data.csv
PoD_code/labeling/: README.md  app.html  tasks.json
archive/: ARCHIVE.md  hick_hyman_pod_validation_v2.py  hick_hyman_validation.py  pod-unified.py
configs/: airlines.json  covertype.json  elec2.json  gas.json  poker.json  synth.json
docs/: ANNOTATION_QUALITY_COMPARISON.md  ARCHITECTURE.md  NOTATION.md  REAL_DATA_PROTOCOL.md  REPRODUCIBILITY.md
experiments/: _robustness_orchestrate.sh  analyze_coupling.py  analyze_generalization.py  analyze_labeling_timing.py  analyze_opacc.py  analyze_robustness.py  emit_robustness_tex.py  run_base_learner_robustness.py  run_coupling_ablation.py  run_generalization.py  run_more_datasets.py  run_opacc_sweep.py  run_resumable.py  streaming_harness.py  threats_to_validity.py
scripts/: build_stats_report.py  check_claims.py  generate_synthetic_annotator_sessions.py  realuser_stats.py  sync_macros.py
src/pod/: __init__.py  baselines.py  config.py  core.py  experiment.py  learner.py  operator.py  presets.py  stats.py  utils.py  viz.py
src/pod/cli/: __init__.py  experiments.py  validation.py
src/pod/realdata/: __init__.py  analysis.py  build_pool.py  cli.py  loader.py
src/pod/streams/: __init__.py  gas_drift.py  openml.py  poker.py  synth.py
src/pod/validation/: __init__.py  corpora.py  entropy.py  figure.py  labels.py  stats.py
tests/: __init__.py  test_annotation_quality.py  test_baselines.py  test_core.py  test_integration.py  test_operator.py  test_pod_ablations.py  test_realdata.py  test_stats.py  test_streams.py  test_utils.py  test_worker_quality.py
