[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-of-deliberation"
version = "1.2.0"
description = "Proof-of-Deliberation: process-based supervision certification for streaming Human-in-the-Loop active learning."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Jorge Martinez-Gil", email = "jorgemarcc@gmail.com" }
]
keywords = [
    "active learning",
    "concept drift",
    "human-in-the-loop",
    "operator drift",
    "streaming",
    "supervision quality",
    "trustworthy AI"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7,<4.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.10,<2.0"
]

[project.optional-dependencies]
validation = [
    "datasets>=2.14,<3.0",
    "statsmodels>=0.14,<1.0"
]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.6,<2.0",
    "types-setuptools"
]

[project.urls]
Homepage = "https://github.com/jorge-martinez-gil/proof-of-deliberation"
Repository = "https://github.com/jorge-martinez-gil/proof-of-deliberation"
Issues = "https://github.com/jorge-martinez-gil/proof-of-deliberation/issues"

[project.scripts]
pod-experiments = "pod.cli.experiments:main"
pod-validate = "pod.cli.validation:main"
pod-stats = "pod.stats:main"
pod-realdata = "pod.realdata.cli:main"
pod-build-pool = "pod.realdata.build_pool:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pod*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning"
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["archive", "PoD_code"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF"
]
ignore = [
    "E501",
    "B008",
    "B028"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/pod"]
